--- a/core3/network-analyzer-impl/trunk/pom.xml
+++ b/core3/network-analyzer-impl/trunk/pom.xml
@@ -13,8 +13,7 @@
 	<name>NetworkAnalyzer</name>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.network-analyzer-impl
-		</bundle.symbolicName>
+		<bundle.symbolicName>org.cytoscape.network-analyzer-impl</bundle.symbolicName>
 		<bundle.namespace>de.mpg.mpi_inf.bioinf.netanalyzer</bundle.namespace>
 	</properties>
 
@@ -84,6 +83,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>session-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
 		</dependency>
@@ -98,13 +102,24 @@
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
-			<artifactId>jfreechart</artifactId>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>		
+
+		<dependency>
+			<groupId>org.cytoscape.wrappers</groupId>
+			<artifactId>org.apache.lucene</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>jfree-jfreechart</artifactId>
 			<version>1.0.13</version>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
-			<artifactId>jcommon</artifactId>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>jfree-jcommon</artifactId>
 			<version>1.0.15</version>
 		</dependency>
 		<dependency>
@@ -112,16 +127,6 @@
 			<artifactId>com.springsource.org.jdom</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-        <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-svg</artifactId>
-            <version>2.0</version>
-        </dependency>
         <dependency>
             <groupId>cytoscape-temp</groupId>
             <artifactId>l2fprod-common-sheet</artifactId>
@@ -137,11 +142,16 @@
             <artifactId>l2fprod-common-shared</artifactId>
             <version>7.3</version>
         </dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>io-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
-		</dependency>		
+        <dependency>
+            <groupId>org.freehep</groupId>
+            <artifactId>freehep-graphicsio</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freehep</groupId>
+            <artifactId>freehep-graphicsio-svg</artifactId>
+            <version>2.0</version>
+        </dependency>
 	</dependencies>
 
 </project>
