--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -129,6 +129,12 @@
 			<version>3.0.0-alpha1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>vizmap-gui-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 
 		<!-- Wrapped libraries -->
 		<dependency>
@@ -156,7 +162,7 @@
 			<artifactId>dnd-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -176,6 +182,12 @@
 			<artifactId>viewmodel-impl</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
