--- a/core3/network-analyzer-impl/trunk/pom.xml
+++ b/core3/network-analyzer-impl/trunk/pom.xml
@@ -143,13 +143,18 @@
             <version>7.3</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphicsio</artifactId>
             <version>2.0</version>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
+            <groupId>cytoscape-temp</groupId>
             <artifactId>freehep-graphicsio-svg</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>freehep-graphics2d</artifactId>
             <version>2.0</version>
         </dependency>
 	</dependencies>
