--- a/core3/table-browser-impl/branches/experiment1/pom.xml
+++ b/core3/table-browser-impl/branches/experiment1/pom.xml
@@ -93,5 +93,10 @@
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>event-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
