--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -171,6 +171,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
