--- a/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
+++ b/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
@@ -14,7 +14,7 @@
   <groupId>cytoscape.csplugins</groupId>
   <artifactId>nodeCharts</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.91</version>
 
   <name>Node Charts Plugin</name>
 
@@ -86,7 +86,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>2.8.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
