--- a/core3/table-browser-impl/trunk/pom.xml
+++ b/core3/table-browser-impl/trunk/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.table-brwoser-impl</bundle.symbolicName>
+		<bundle.symbolicName>org.cytoscape.table-browser-impl</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.internal</bundle.namespace>
 	</properties>
 
@@ -106,6 +106,11 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>equations-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>swing-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
