--- a/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
+++ b/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
@@ -7,7 +7,7 @@
   <target name="init">
     <tstamp/>
     <property name="name" value="VennDiagram"/>
-    <property name="version" value="1.01"/>
+    <property name="version" value="1.02"/>
 
     <echo message="Building ${name} version ${version} ..."/>
 
@@ -40,7 +40,7 @@
     <artifact:dependencies pathId="dependency.classpath">
       <dependency groupId="cytoscape" 
                   artifactId="application" 
-                  version="2.8.0-beta1"/>
+                  version="2.8.0"/>
     </artifact:dependencies>
 
     <!-- Define the class path -->
