--- a/core3/ding-customgraphics-manager-impl/trunk/pom.xml
+++ b/core3/ding-customgraphics-manager-impl/trunk/pom.xml
@@ -111,8 +111,8 @@
 
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>work-swing-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<artifactId>work-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
