--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -430,6 +430,12 @@
 			<version>1.0.3</version>
 		</dependency>
 
+		<!-- Enhanced search -->
+	    <dependency>
+	    	<groupId>org.cytoscape</groupId>
+			<artifactId>search-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+	    </dependency>
 
 		<!-- Ding's custom graphics manager -->
 		<dependency>
