--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -106,11 +106,6 @@
 			<artifactId>session-api</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.cytoscape.wrappers</groupId>
-			<artifactId>org.apache.lucene</artifactId>
-			<version>3.0.2</version>
-		</dependency>
 
 		<dependency>
     		<groupId>org.cytoscape</groupId>
@@ -124,6 +119,12 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
     
+
+    <dependency>
+    	<groupId>org.cytoscape.wrappers</groupId>
+		<artifactId>org.swinglabs.swing-layout</artifactId>
+		<version>1.0.3</version>
+    </dependency>
 
 
 		<!-- dependencies specifically for unit testing -->
