--- a/core3/layout-cytoscape-impl/trunk/pom.xml
+++ b/core3/layout-cytoscape-impl/trunk/pom.xml
@@ -54,33 +54,31 @@
 
 		</plugins>
 	</build>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>viewmodel-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>layout-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cytoscape</groupId>
-      <artifactId>presentation-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>colt</groupId>
-      <artifactId>colt</artifactId>
-      <version>1.2.0</version>
-     </dependency>
-  </dependencies>
-
+	<dependencies>
+		 <dependency>
+		 	<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		 </dependency>
+		 <dependency>
+		 	<groupId>org.cytoscape</groupId>
+			<artifactId>viewmodel-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		 </dependency>
+		 <dependency>
+		 	<groupId>org.cytoscape</groupId>
+			<artifactId>layout-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		 </dependency>
+		 <dependency>
+		 	<groupId>org.cytoscape</groupId>
+			<artifactId>presentation-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		 </dependency>
+		 <dependency>
+		 	<groupId>cytoscape-temp</groupId>
+			<artifactId>colt</artifactId>
+			<version>1.2.0</version>
+		 </dependency>
+	</dependencies>
 </project>
