--- a/core3/webservice-api/trunk/pom.xml
+++ b/core3/webservice-api/trunk/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>model-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 
 
 		<!-- Testing -->
