--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -82,6 +82,19 @@
 			<name>Cytoscape Third Party</name>
 			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
 		</repository>
+		
+		<!-- For Apache poi -->
+		<repository>
+  			<id>com.springsource.repository.bundles.release</id>
+    		<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+    		<url>http://repository.springsource.com/maven/bundles/release</url>
+		</repository>
+
+		<repository>
+    		<id>com.springsource.repository.bundles.external</id>
+    		<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+    		<url>http://repository.springsource.com/maven/bundles/external</url>
+		</repository>		
 	</repositories>
 
 	<!-- Dependencies needed to compile this project. -->
@@ -126,6 +139,37 @@
 		<version>1.0.3</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.apache.xmlbeans</groupId>
+      <artifactId>xmlbeans</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-contrib</artifactId>
+      <version>3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-schemas</artifactId>
+      <version>3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.6.1</version>
+    </dependency>
 
 		<!-- dependencies specifically for unit testing -->
 		<dependency>
