--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -132,44 +132,50 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
     
+    	<dependency>
+    		<groupId>org.cytoscape.wrappers</groupId>
+			<artifactId>org.swinglabs.swing-layout</artifactId>
+			<version>1.0.3</version>
+    	</dependency>
 
-    <dependency>
-    	<groupId>org.cytoscape.wrappers</groupId>
-		<artifactId>org.swinglabs.swing-layout</artifactId>
-		<version>1.0.3</version>
-    </dependency>
 
+		<!-- Apache poi -->
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId> 
+			<artifactId>com.springsource.org.apache.xmlbeans</artifactId> 
+			<version>2.4.0</version> 
+		</dependency>
+		<dependency>
+			<groupId>org.dom4j</groupId>
+			<artifactId>com.springsource.org.dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+		<dependency> 
+			<groupId>javax.xml.stream</groupId> 
+			<artifactId>com.springsource.javax.xml.stream</artifactId> 
+			<version>1.0.1</version> 
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.apache.poi</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.apache.poi-contrib</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.apache.poi-ooxml</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>cytoscape-temp</groupId>
+			<artifactId>org.apache.poi-ooxml-schemas</artifactId>
+			<version>3.6</version>
+		</dependency>
 
-    <dependency>
-      <groupId>org.apache.xmlbeans</groupId>
-      <artifactId>xmlbeans</artifactId>
-      <version>2.4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi</artifactId>
-      <version>3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-contrib</artifactId>
-      <version>3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml-schemas</artifactId>
-      <version>3.6</version>
-    </dependency>
-    <dependency>
-      <groupId>dom4j</groupId>
-      <artifactId>dom4j</artifactId>
-      <version>1.6.1</version>
-    </dependency>
 
 		<!-- dependencies specifically for unit testing -->
 		<dependency>
