--- a/core3/core-task-impl/trunk/pom.xml
+++ b/core3/core-task-impl/trunk/pom.xml
@@ -130,6 +130,11 @@
 			<artifactId>swing-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>layout-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
