--- a/core3/table-import-impl/trunk/pom.xml
+++ b/core3/table-import-impl/trunk/pom.xml
@@ -127,6 +127,12 @@
 		</dependency>
 
 		<dependency>
+    		<groupId>org.cytoscape</groupId>
+    		<artifactId>swing-util</artifactId>
+    		<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-swing-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
