--- a/core3/layout-cytoscape-impl/trunk/pom.xml
+++ b/core3/layout-cytoscape-impl/trunk/pom.xml
@@ -58,12 +58,12 @@
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
 		 </dependency>
 		 <dependency>
 		 	<groupId>org.cytoscape</groupId>
