--- a/core3/swing-application-impl/trunk/pom.xml
+++ b/core3/swing-application-impl/trunk/pom.xml
@@ -113,5 +113,10 @@
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>presentation-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
