--- a/core3/webservice-biomart-client/trunk/pom.xml
+++ b/core3/webservice-biomart-client/trunk/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.webservice-biomart-client</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.webservice.biomart</bundle.namespace>
+		<bundle.symbolicName>org.cytoscape.io.webservice-biomart-client</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.io.webservice.biomart</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -82,8 +82,7 @@
 						<Bundle-Version>${pom.version}</Bundle-Version>
 						<!-- | assume public classes are in the top package, and private classes 
 							are under ".internal" -->
-						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
-						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+						
 						<!-- | each module can override these defaults in their osgi.bnd file -->
 						<_include>-osgi.bnd</_include>
 					</instructions>
