--- a/core3/swing-util/trunk/pom.xml
+++ b/core3/swing-util/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha4</version>
   </parent>
 
   <properties>
@@ -20,6 +20,12 @@
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
+
+    <scm>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/swing-util/trunk</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/swing-util/trunk</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/swing-util/trunk</url>
+    </scm>
 
   <repositories>
       <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
@@ -53,9 +59,6 @@
       <resource>
         <directory>src/main/resources</directory>
       </resource>
-      <!--
-       | example additional resource entries, useful when building Eclipse RCP applications
-      -->
       <resource>
         <directory>.</directory>
         <includes>
@@ -70,32 +73,18 @@
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
         <version>1.4</version>
-        <!--
-           | enable improved OSGi compilation support for the bundle life-cycle.
-           | to switch back to the standard bundle life-cycle, move this setting
-           | down to the maven-bundle-plugin section
-          -->
         <extensions>true</extensions>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <version>1.4.3</version>
-        <!--
-         | the following instructions build a simple set of public/private classes into an OSGi bundle
-        -->
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
             <Bundle-Version>${pom.version}</Bundle-Version>
-            <!--
-             | assume public classes are in the top package, and private classes are under ".internal"
-            -->
             <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
-            <!--
-             | each module can override these defaults in their osgi.bnd file
-            -->
             <_include>-osgi.bnd</_include>
           </instructions>
         </configuration>
