--- a/core3/webservice-api/trunk/pom.xml
+++ b/core3/webservice-api/trunk/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<artifactId>parent</artifactId>
@@ -16,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>webservice-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>3.0.0-alpha1</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
 	<packaging>bundle</packaging>
 
     <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/webservice-api/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/webservice-api/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/webservice-api/trunk</url>
+        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/webservice-api/tags/webservice-api-3.0.0-alpha1</connection>
+        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/webservice-api/tags/webservice-api-3.0.0-alpha1</developerConnection>
+        <url>http://chianti.ucsd.edu/svn/core3/webservice-api/tags/webservice-api-3.0.0-alpha1</url>
     </scm>
 
     <repositories>
